@@ -1,3 +1,7 @@
+2020-10-27  John D. Ramsdell  <ramsdell@mitre.org>
+
+	* cpsa.cabal (Data-Files): Added missing examples to Data-files.
+
 2020-05-21  John D. Ramsdell  <ramsdell@mitre.org>
 
 	* cpsa.cabal (Version): Tagged as 3.6.6
